https://github.com/cloudstore/main/issues/17